[package]
name = "deno-proc-macro-rules-macros"
version = "0.3.1"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
repository = "https://github.com/nrc/proc-macro-rules"
description = "Deno fork of proc-macro-rules-macros. Emulate macro-rules pattern matching in procedural macros"
readme = "README.md"
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.17.1"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.56"
